Performance benchmarking in Amazon EMR / S3